* Migrate to workmanager for background tasks
* Upgrade dependencies