@@ -5,39 +5,39 @@
     
     
       
-      <testcase classname="fastlane.lanes" name="0: update_fastlane" time="7.905768">
+      <testcase classname="fastlane.lanes" name="0: update_fastlane" time="7.414939">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="1: default_platform" time="0.00013">
+      <testcase classname="fastlane.lanes" name="1: default_platform" time="0.000145">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="2: puro flutter clean" time="10.225417">
+      <testcase classname="fastlane.lanes" name="2: puro flutter clean" time="7.941078">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="3: puro flutter pub get" time="3.104764">
+      <testcase classname="fastlane.lanes" name="3: puro flutter pub get" time="3.13932">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="4: puro flutter build ipa" time="72.033388">
+      <testcase classname="fastlane.lanes" name="4: puro flutter build ipa" time="68.261964">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="5: app_store_connect_api_key" time="0.004088">
+      <testcase classname="fastlane.lanes" name="5: app_store_connect_api_key" time="0.00284">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="6: deliver" time="192.099484">
+      <testcase classname="fastlane.lanes" name="6: deliver" time="208.467903">
         
-          <failure message="/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/actions/actions_helper.rb:67:in &apos;Fastlane::Actions.execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:255:in &apos;block in Fastlane::Runner#execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:229:in &apos;Dir.chdir&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:229:in &apos;Fastlane::Runner#execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:157:in &apos;Fastlane::Runner#trigger_action_by_name&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/fast_file.rb:159:in &apos;Fastlane::FastFile#method_missing&apos;&#10;Fastfile:22:in &apos;block (2 levels) in Fastlane::FastFile#parsing_binding&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/lane.rb:41:in &apos;Fastlane::Lane#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:49:in &apos;block in Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Dir.chdir&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/lane_manager.rb:46:in &apos;Fastlane::LaneManager.cruise_lane&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/command_line_handler.rb:34:in &apos;Fastlane::CommandLineHandler.handle&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/commands_generator.rb:110:in &apos;block (2 levels) in Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:187:in &apos;Commander::Command#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:157:in &apos;Commander::Command#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/runner.rb:444:in &apos;Commander::Runner#run_active_command&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane_core/lib/fastlane_core/ui/fastlane_runner.rb:124:in &apos;Commander::Runner#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/delegates.rb:18:in &apos;Commander::Delegates#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/commands_generator.rb:363:in &apos;Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/commands_generator.rb:43:in &apos;Fastlane::CommandsGenerator.start&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/fastlane/lib/fastlane/cli_tools_distributor.rb:123:in &apos;Fastlane::CLIToolsDistributor.take_off&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.229.0/bin/fastlane:23:in &apos;&lt;top (required)&gt;&apos;&#10;/opt/homebrew/lib/ruby/site_ruby/3.4.0/rubygems.rb:319:in &apos;Kernel#load&apos;&#10;/opt/homebrew/lib/ruby/site_ruby/3.4.0/rubygems.rb:319:in &apos;Gem.activate_and_load_bin_path&apos;&#10;/opt/homebrew/opt/ruby/bin/fastlane:25:in &apos;&lt;main&gt;&apos;&#10;&#10;appStoreVersions with id &apos;0849504a-c031-4a40-803f-26956ccf4e51&apos; is not in valid state. - This resource cannot be reviewed, please check associated errors to see why.&#10;The provided entity is missing a required attribute - You must provide a value for the attribute &apos;whatsNew&apos; with this request" />
+          <failure message="/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/actions/actions_helper.rb:67:in &apos;Fastlane::Actions.execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:255:in &apos;block in Fastlane::Runner#execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:229:in &apos;Dir.chdir&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:229:in &apos;Fastlane::Runner#execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:157:in &apos;Fastlane::Runner#trigger_action_by_name&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/fast_file.rb:159:in &apos;Fastlane::FastFile#method_missing&apos;&#10;Fastfile:22:in &apos;block (2 levels) in Fastlane::FastFile#parsing_binding&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/lane.rb:41:in &apos;Fastlane::Lane#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:49:in &apos;block in Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Dir.chdir&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/lane_manager.rb:46:in &apos;Fastlane::LaneManager.cruise_lane&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/command_line_handler.rb:34:in &apos;Fastlane::CommandLineHandler.handle&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/commands_generator.rb:110:in &apos;block (2 levels) in Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:187:in &apos;Commander::Command#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:157:in &apos;Commander::Command#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/runner.rb:444:in &apos;Commander::Runner#run_active_command&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane_core/lib/fastlane_core/ui/fastlane_runner.rb:124:in &apos;Commander::Runner#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/delegates.rb:18:in &apos;Commander::Delegates#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/commands_generator.rb:363:in &apos;Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/commands_generator.rb:43:in &apos;Fastlane::CommandsGenerator.start&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/fastlane/lib/fastlane/cli_tools_distributor.rb:123:in &apos;Fastlane::CLIToolsDistributor.take_off&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.230.0/bin/fastlane:23:in &apos;&lt;top (required)&gt;&apos;&#10;/opt/homebrew/lib/ruby/site_ruby/3.4.0/rubygems.rb:303:in &apos;Kernel#load&apos;&#10;/opt/homebrew/lib/ruby/site_ruby/3.4.0/rubygems.rb:303:in &apos;Gem.activate_and_load_bin_path&apos;&#10;/opt/homebrew/opt/ruby/bin/fastlane:25:in &apos;&lt;main&gt;&apos;&#10;&#10;appStoreVersions with id &apos;47f9bc32-39b6-4af2-a7a3-5fde5e60ccc4&apos; is not in valid state. - This resource cannot be reviewed, please check associated errors to see why.&#10;The provided entity is missing a required attribute - You must provide a value for the attribute &apos;whatsNew&apos; with this request" />
         
       </testcase>
     
