@@ -1,7 +1,7 @@
 name: promaja
 description: Weather app made in Flutter.
 publish_to: 'none'
-version: 2.0.0+200
+version: 2.0.0+225
 
 #
 # DEPLOYING APP
@@ -41,7 +41,7 @@ dependencies:
   flutter_swipe_action_cell: 3.1.6
   flutter_web_browser: 0.17.3
   geolocator: 14.0.2
-  hive_ce: 2.15.1
+  hive_ce: 2.16.0
   hive_ce_flutter: 2.3.3
   home_widget: 0.8.1
   intl: 0.20.2
@@ -54,7 +54,7 @@ dev_dependencies:
   # build_runner: 2.10.4
   # envied_generator: 1.3.2
   # flutter_launcher_icons: 0.14.4
-  # hive_ce_generator: 1.10.1
+  # hive_ce_generator: 1.11.0
 
 flutter:
   uses-material-design: true
